--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -8,9 +8,10 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Guiding Light"
-        android:textSize="40dp"
+        android:text="South African Wildlife Rehabilitation Center"
+        android:textSize="30dp"
         android:textStyle="bold"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -20,16 +21,15 @@
 
     <ImageView
         android:id="@+id/folderLogoSplashScreen"
-        android:layout_width="138dp"
-        android:layout_height="135dp"
+        android:layout_width="177dp"
+        android:layout_height="297dp"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.362"
-        app:srcCompat="@drawable/logo" />
+        app:layout_constraintVertical_bias="0.525"
+        app:srcCompat="@drawable/sawrc_logo" />
 
     <TextView
         android:id="@+id/developedByText"
